--- a/style.css
+++ b/style.css
@@ -14,3 +14,36 @@ body{
 a{
   text-decoration:none; 
 }
+
+/* startpagina */
+.screen{
+  width:100%;
+  max-width:420px;
+  min-height:100vh;
+  background:#fff;
+}
+body{
+  display:flex;
+  justify-content:center;
+}
+.screen .hero{
+  position:relative;
+  border-radius: 0 0 180px 180px;
+  background:#8E8C6F;
+  height: 51vh;
+  min-height: 420px;
+  padding: 70px 18px 0;
+  text-align:center;
+  overflow:hidden;
+}
+.screen .hero::after{
+  position:absolute;
+  left:50%;
+  bottom:-150px;
+  transform:translateX(-50%);
+  width:155%;
+  height:300px;
+  background:#8E8C6F;
+  border-radius:999px;
+  z-index:1;
+}
