--- a/style.css
+++ b/style.css
@@ -145,3 +145,49 @@ body{
   display:block;
   filter: brightness(0) invert(1);
 }
+
+/* over ons */
+.app{
+  width:100%;
+  max-width:420px;
+  min-height:100vh;
+  margin:0 auto;
+  background:#fff;
+  display:flex;
+  flex-direction:column;
+}
+.app .top{
+  position:fixed;
+  background:#8E8C6F;
+  width: 100%;
+  height: 125px;
+  overflow:hidden;
+  border-radius: 0 0 50px 50px;
+}
+.app .top__inner{
+  position:relative;
+  z-index:1;
+  height:80%;
+  display:flex;
+  align-items:flex-start;
+  justify-content:center;
+  padding-top: 38px;
+  background-color: #8E8C6F;
+}
+.app .top__logo{
+  color:#F3F1E6;
+  font-size:64px;
+  line-height:1;
+  font-weight:500;
+  display:flex;
+  align-items:flex-end;
+  gap:10px;
+}
+.app .top__ring{
+  width:70px;
+  height:32px;
+  border:4px solid #F3F1E6;
+  border-radius:999px;
+  display:inline-block;
+  transform: translateY(-4px);
+}
