--- a/style.css
+++ b/style.css
@@ -191,3 +191,68 @@ body{
   display:inline-block;
   transform: translateY(-4px);
 }
+.app .content{
+  flex:1;
+  padding: 18px 18px 60px;
+  margin-top: 120px;
+}
+.app .spacer{ 
+  height: 18px; 
+}
+.app .block{ 
+  margin: 18px 0 28px; 
+}
+.app .block--split{
+  display:grid;
+  grid-template-columns: 1fr 170px;
+  gap: 18px;
+  align-items:start;
+}
+.app .text h2{
+  margin:0 0 10px;
+  font-size: 22px;
+  line-height:1.05;
+  font-weight:500;
+}
+.app .text p{
+  margin:0;
+  font-size: 14px;
+  line-height:1.25;
+  opacity:.95;
+}
+.app .media img{
+  width:100%;
+  height:110px;
+  object-fit:cover;
+  border-radius: 18px;
+  display:block;
+}
+.app .block--center{ 
+  text-align:center; 
+}
+.app .block--center h3{
+  margin: 0 0 14px;
+  font-size: 22px;
+  line-height:1.05;
+  font-weight:500;
+}
+.app .grid2{
+  display:grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 14px;
+  margin: 0 0 12px;
+}
+.app .grid2 img{
+  width:100%;
+  height:120px;
+  object-fit:cover;
+  border-radius: 18px;
+  display:block;
+}
+.app .small{
+  margin:0 auto;
+  max-width: 34ch;
+  font-size: 14px;
+  line-height:1.25;
+  opacity:.95;
+}
