--- a/style.css
+++ b/style.css
@@ -390,6 +390,25 @@ body{
   font-size: 24px;
   font-weight: 500;
 }
+.app .detail__sizes{
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  padding-left: 0;
+  gap: 10px;
+}
+.app .detail__sizes li{
+  border:3px solid #B6A188;
+  color: #B6A188;
+  width: 40px;
+  height: 25px;
+  border-radius: 20px;
+  text-align: center;
+}
+.app .detail__sizes li:hover{
+  background-color: #B6A188;
+  color: #F3E8D2;
+}
 .app .detail__text{
   margin: 0 0 22px;
   font-size: 18px;
