--- a/style.css
+++ b/style.css
@@ -433,3 +433,53 @@ body{
   font-size: 16px;
   cursor:pointer;
 }
+
+/* payment pagina */
+.app .content--payment{
+  margin-top: 120px;
+  padding: 18px 18px 110px;
+}
+.pay__title{
+  margin: 0 0 16px;
+  font-size: 36px;
+  font-weight: 500;
+}
+.pay__section{
+  margin: 18px 0 22px;
+}
+.pay__h2{
+  margin: 0 0 12px;
+  font-size: 26px;
+  font-weight: 500;
+}
+.order-card{
+  display:grid;
+  grid-template-columns: 80px 1fr auto;
+  gap: 12px;
+  align-items:center;
+  background: #fff;
+  padding: 12px;
+}
+.order-card__img{
+  width: 80px;
+  height: 80px;
+  border-radius: 14px;
+  object-fit: cover;
+  display:block;
+}
+.order-card__name{
+  font-size: 18px;
+  font-weight: 500;
+}
+.order-card__meta{
+  font-size: 14px;
+}
+.order-card__price{
+  font-weight: 500;
+}
+.order-total{
+  display:flex;
+  justify-content:space-between;
+  margin-top: 10px;
+  padding: 0 4px;
+}
